--- a/index.html
+++ b/index.html
@@ -1905,7 +1905,21 @@
                 aboutLangSelector.addEventListener('change', (e) => switchAboutLanguage(e.target.value));
                 switchAboutLanguage('en');
             }
+           });
+    </script>
+
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js')
+            .then(reg => {
+              console.log('Service Worker registered successfully:', reg);
+            })
+            .catch(err => {
+              console.error('Service Worker registration failed:', err);
+            });
         });
+      }
     </script>
 </body>
 </html>
