--- a/index.html
+++ b/index.html
@@ -1911,7 +1911,7 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js')
+          navigator.serviceWorker.register('./service-worker.js')
             .then(reg => {
               console.log('Service Worker registered successfully:', reg);
             })
@@ -1922,4 +1922,5 @@
       }
     </script>
 </body>
+
 </html>
